# UIAnalyzerMCP

./: LICENSE  README.md  analyzer.py  framework_detector.py  models.py  pyproject.toml  server.py  test_mcp_server.py
test_output/: accessibility_tree.yaml  dom_structure.txt  elements.json  full_analysis.json  issues.json  tech_stack.json  viewport_comparison.json
